Small fix in analysis.ipynb

--- a/qaoa_factorization/notebooks/analysis.ipynb
+++ b/qaoa_factorization/notebooks/analysis.ipynb
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,6 @@
        "      <th>gamma_0</th>\n",
        "      <th>beta_0</th>\n",
        "      <th>state_populations</th>\n",
-       "      <th>angle_interpolation</th>\n",
        "      <th>fidelity</th>\n",
        "      <th>cost</th>\n",
        "      <th>num_qubits</th>\n",
@@ -806,7 +805,6 @@
        "      <td>3.428</td>\n",
        "      <td>1.861</td>\n",
        "      <td>[2.2213940169317707e-10, 8.107282754043833e-10...</td>\n",
-       "      <td>True</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>8.662975e-08</td>\n",
        "      <td>3</td>\n",
@@ -820,7 +818,6 @@
        "      <td>2.694</td>\n",
        "      <td>2.320</td>\n",
        "      <td>[4.931016681837994e-12, 3.185194795596947e-12,...</td>\n",
-       "      <td>True</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.856609e-09</td>\n",
        "      <td>3</td>\n",
@@ -834,7 +831,6 @@
        "      <td>3.053</td>\n",
        "      <td>1.152</td>\n",
        "      <td>[7.895131448234326e-15, 2.9922729391870412e-15...</td>\n",
-       "      <td>True</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.317679e-11</td>\n",
        "      <td>3</td>\n",
@@ -848,7 +844,6 @@
        "      <td>2.694</td>\n",
        "      <td>2.320</td>\n",
        "      <td>[2.2997235619669462e-11, 8.475137963020268e-11...</td>\n",
-       "      <td>True</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.050581e-08</td>\n",
        "      <td>3</td>\n",
@@ -862,7 +857,6 @@
        "      <td>3.061</td>\n",
        "      <td>1.897</td>\n",
        "      <td>[1.2884092325239485e-12, 4.940020124716064e-13...</td>\n",
-       "      <td>True</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.628092e-09</td>\n",
        "      <td>3</td>\n",
@@ -876,7 +870,6 @@
        "      <td>2.073</td>\n",
        "      <td>2.278</td>\n",
        "      <td>[6.869179994821649e-15, 1.5899680808483635e-14...</td>\n",
-       "      <td>True</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.120620e-11</td>\n",
        "      <td>3</td>\n",
@@ -890,7 +883,6 @@
        "      <td>2.984</td>\n",
        "      <td>0.901</td>\n",
        "      <td>[0.0003882041254432592, 0.00035410907959226737...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.979980</td>\n",
        "      <td>3.676379e-01</td>\n",
        "      <td>5</td>\n",
@@ -904,7 +896,6 @@
        "      <td>4.050</td>\n",
        "      <td>0.902</td>\n",
        "      <td>[0.0003337186791980223, 0.0006909475733505251,...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.847784</td>\n",
        "      <td>3.169192e+01</td>\n",
        "      <td>5</td>\n",
@@ -918,7 +909,6 @@
        "      <td>1.047</td>\n",
        "      <td>1.047</td>\n",
        "      <td>[0.0009099952564454205, 0.004593977470357765, ...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.657452</td>\n",
        "      <td>8.509635e+01</td>\n",
        "      <td>5</td>\n",
@@ -932,7 +922,6 @@
        "      <td>1.901</td>\n",
        "      <td>0.926</td>\n",
        "      <td>[0.0005605698230224867, 0.00022994575627501078...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.942966</td>\n",
        "      <td>6.583005e-01</td>\n",
        "      <td>5</td>\n",
@@ -946,7 +935,6 @@
        "      <td>2.990</td>\n",
        "      <td>1.904</td>\n",
        "      <td>[0.0005253555733310621, 0.0014343712337320262,...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.622027</td>\n",
        "      <td>4.678020e+01</td>\n",
        "      <td>5</td>\n",
@@ -960,7 +948,6 @@
        "      <td>2.102</td>\n",
        "      <td>1.458</td>\n",
        "      <td>[0.00015247298860155735, 8.480510780504873e-05...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.542671</td>\n",
        "      <td>4.065413e+01</td>\n",
        "      <td>5</td>\n",
@@ -974,7 +961,6 @@
        "      <td>3.475</td>\n",
        "      <td>2.119</td>\n",
        "      <td>[2.4335039151386692e-05, 0.0001162400900054422...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.084767</td>\n",
        "      <td>8.788586e+01</td>\n",
        "      <td>8</td>\n",
@@ -988,7 +974,6 @@
        "      <td>3.475</td>\n",
        "      <td>2.119</td>\n",
        "      <td>[0.0018449266686096659, 0.0002572550653511326,...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.061501</td>\n",
        "      <td>1.037898e+04</td>\n",
        "      <td>8</td>\n",
@@ -1002,7 +987,6 @@
        "      <td>3.268</td>\n",
        "      <td>1.728</td>\n",
        "      <td>[0.015967913437679695, 0.0038748129407450136, ...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.043136</td>\n",
        "      <td>2.374859e+04</td>\n",
        "      <td>8</td>\n",
@@ -1016,7 +1000,6 @@
        "      <td>4.248</td>\n",
        "      <td>1.689</td>\n",
        "      <td>[0.00014654710600898907, 2.526708450568162e-06...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.070362</td>\n",
        "      <td>2.262790e+02</td>\n",
        "      <td>11</td>\n",
@@ -1030,7 +1013,6 @@
        "      <td>1.992</td>\n",
        "      <td>2.328</td>\n",
        "      <td>[0.00038698759172660233, 7.214331370984746e-06...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.006986</td>\n",
        "      <td>4.216847e+05</td>\n",
        "      <td>11</td>\n",
@@ -1044,7 +1026,6 @@
        "      <td>2.616</td>\n",
        "      <td>1.884</td>\n",
        "      <td>[0.0003809922363330681, 0.00023896970837803666...</td>\n",
-       "      <td>True</td>\n",
        "      <td>0.003192</td>\n",
        "      <td>5.782909e+06</td>\n",
        "      <td>11</td>\n",
@@ -1074,48 +1055,48 @@
        "16  481  linear_quadratic      BFGS      11    1.992   2.328   \n",
        "17  481          standard    COBYLA      29    2.616   1.884   \n",
        "\n",
-       "                                    state_populations  angle_interpolation  \\\n",
-       "0   [2.2213940169317707e-10, 8.107282754043833e-10...                 True   \n",
-       "1   [4.931016681837994e-12, 3.185194795596947e-12,...                 True   \n",
-       "2   [7.895131448234326e-15, 2.9922729391870412e-15...                 True   \n",
-       "3   [2.2997235619669462e-11, 8.475137963020268e-11...                 True   \n",
-       "4   [1.2884092325239485e-12, 4.940020124716064e-13...                 True   \n",
-       "5   [6.869179994821649e-15, 1.5899680808483635e-14...                 True   \n",
-       "6   [0.0003882041254432592, 0.00035410907959226737...                 True   \n",
-       "7   [0.0003337186791980223, 0.0006909475733505251,...                 True   \n",
-       "8   [0.0009099952564454205, 0.004593977470357765, ...                 True   \n",
-       "9   [0.0005605698230224867, 0.00022994575627501078...                 True   \n",
-       "10  [0.0005253555733310621, 0.0014343712337320262,...                 True   \n",
-       "11  [0.00015247298860155735, 8.480510780504873e-05...                 True   \n",
-       "12  [2.4335039151386692e-05, 0.0001162400900054422...                 True   \n",
-       "13  [0.0018449266686096659, 0.0002572550653511326,...                 True   \n",
-       "14  [0.015967913437679695, 0.0038748129407450136, ...                 True   \n",
-       "15  [0.00014654710600898907, 2.526708450568162e-06...                 True   \n",
-       "16  [0.00038698759172660233, 7.214331370984746e-06...                 True   \n",
-       "17  [0.0003809922363330681, 0.00023896970837803666...                 True   \n",
+       "                                    state_populations  fidelity          cost  \\\n",
+       "0   [2.2213940169317707e-10, 8.107282754043833e-10...  1.000000  8.662975e-08   \n",
+       "1   [4.931016681837994e-12, 3.185194795596947e-12,...  1.000000  1.856609e-09   \n",
+       "2   [7.895131448234326e-15, 2.9922729391870412e-15...  1.000000  1.317679e-11   \n",
+       "3   [2.2997235619669462e-11, 8.475137963020268e-11...  1.000000  1.050581e-08   \n",
+       "4   [1.2884092325239485e-12, 4.940020124716064e-13...  1.000000  1.628092e-09   \n",
+       "5   [6.869179994821649e-15, 1.5899680808483635e-14...  1.000000  1.120620e-11   \n",
+       "6   [0.0003882041254432592, 0.00035410907959226737...  0.979980  3.676379e-01   \n",
+       "7   [0.0003337186791980223, 0.0006909475733505251,...  0.847784  3.169192e+01   \n",
+       "8   [0.0009099952564454205, 0.004593977470357765, ...  0.657452  8.509635e+01   \n",
+       "9   [0.0005605698230224867, 0.00022994575627501078...  0.942966  6.583005e-01   \n",
+       "10  [0.0005253555733310621, 0.0014343712337320262,...  0.622027  4.678020e+01   \n",
+       "11  [0.00015247298860155735, 8.480510780504873e-05...  0.542671  4.065413e+01   \n",
+       "12  [2.4335039151386692e-05, 0.0001162400900054422...  0.084767  8.788586e+01   \n",
+       "13  [0.0018449266686096659, 0.0002572550653511326,...  0.061501  1.037898e+04   \n",
+       "14  [0.015967913437679695, 0.0038748129407450136, ...  0.043136  2.374859e+04   \n",
+       "15  [0.00014654710600898907, 2.526708450568162e-06...  0.070362  2.262790e+02   \n",
+       "16  [0.00038698759172660233, 7.214331370984746e-06...  0.006986  4.216847e+05   \n",
+       "17  [0.0003809922363330681, 0.00023896970837803666...  0.003192  5.782909e+06   \n",
        "\n",
-       "    fidelity          cost  num_qubits  \n",
-       "0   1.000000  8.662975e-08           3  \n",
-       "1   1.000000  1.856609e-09           3  \n",
-       "2   1.000000  1.317679e-11           3  \n",
-       "3   1.000000  1.050581e-08           3  \n",
-       "4   1.000000  1.628092e-09           3  \n",
-       "5   1.000000  1.120620e-11           3  \n",
-       "6   0.979980  3.676379e-01           5  \n",
-       "7   0.847784  3.169192e+01           5  \n",
-       "8   0.657452  8.509635e+01           5  \n",
-       "9   0.942966  6.583005e-01           5  \n",
-       "10  0.622027  4.678020e+01           5  \n",
-       "11  0.542671  4.065413e+01           5  \n",
-       "12  0.084767  8.788586e+01           8  \n",
-       "13  0.061501  1.037898e+04           8  \n",
-       "14  0.043136  2.374859e+04           8  \n",
-       "15  0.070362  2.262790e+02          11  \n",
-       "16  0.006986  4.216847e+05          11  \n",
-       "17  0.003192  5.782909e+06          11  "
+       "    num_qubits  \n",
+       "0            3  \n",
+       "1            3  \n",
+       "2            3  \n",
+       "3            3  \n",
+       "4            3  \n",
+       "5            3  \n",
+       "6            5  \n",
+       "7            5  \n",
+       "8            5  \n",
+       "9            5  \n",
+       "10           5  \n",
+       "11           5  \n",
+       "12           8  \n",
+       "13           8  \n",
+       "14           8  \n",
+       "15          11  \n",
+       "16          11  \n",
+       "17          11  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1105,7 @@
     "idx_min = experiment_results.groupby(group_cols)['fidelity'].idxmax()\n",
     "best_results = experiment_results.loc[idx_min,]\n",
     "\n",
-    "best_results = best_results[['N', 'setup', 'optimizer', 'layers', 'gamma_0', 'beta_0', 'state_populations', 'angle_interpolation', 'fidelity', 'cost', 'num_qubits']].reset_index(drop=True)\n",
+    "best_results = best_results[['N', 'setup', 'optimizer', 'layers', 'gamma_0', 'beta_0', 'state_populations', 'fidelity', 'cost', 'num_qubits']].reset_index(drop=True)\n",
     "\n",
     "best_results"
    ]
