Completed methodology chapter

--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -122,16 +122,27 @@
 \include{02-factorization/01-ShorsAlgo}
 \include{02-factorization/02-AdiabaticFactorization}
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Chapter 3
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\include{03-results/01-IntroducingProblem}
-\include{03-results/02-Benchmarking}
-\include{03-results/03-OptimizerSelection}
-\include{03-results/04-Results}
+\include{03-methodology/00-Introduction}
+\include{03-methodology/01-IncrementalApproach}
+\include{03-methodology/02-ParameterInitialization}
+\include{03-methodology/03-ClassicalOptimizer}
+\include{03-methodology/04-SetupSummary}
 
-\include{04-conclusion/conclusion}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 4
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\include{04-results/01-IntroducingProblem}
+\include{04-results/02-Benchmarking}
+\include{04-results/04-Results}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 5
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\include{05-discussion/conclusion}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % CHAPTERS END
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
