--- a/thesis/Thesis.tex
+++ b/thesis/Thesis.tex
@@ -10,12 +10,15 @@
 \makeatother
 
 \AtBeginDocument{%
-	\DeclareSymbolFont{operators}{OT1}{ntxtlf}{m}{n} % Tentar redefinir operadores
-	\SetSymbolFont{operators}{bold}{OT1}{ntxtlf}{b}{n} % Para versão em negrito
+	\DeclareSymbolFont{operators}{OT1}{ntxtlf}{m}{n}
+	\SetSymbolFont{operators}{bold}{OT1}{ntxtlf}{b}{n}
 }
 \usepackage{bbm}
 \newcommand{\1}{\mathbbm{1}}
+\usepackage{bm}
 
+\usepackage{setspace}
+\onehalfspacing
 
 %Some definitions
 %\newcommand{\ket}[1]{| #1 \rangle}
@@ -30,9 +33,7 @@
 
 \input{abbreviations}
 
-\usepackage[skip=6pt, indent=14pt]{parskip}
-
-
+\usepackage[skip=4pt, indent=16pt]{parskip}
 
 %%%%%%%%%%%%%%%
 % Custom packages
@@ -117,17 +118,31 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Chapter 2
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\include{02-factorization/00-Introduction}
 \include{02-factorization/01-ShorsAlgo}
 \include{02-factorization/02-AdiabaticFactorization}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Chapter 3
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\include{03-results/01-IntroducingProblem}
-%\include{03 - QAOA/02-BasicConcepts}
+\include{03-methodology/00-Introduction}
+\include{03-methodology/01-IncrementalApproach}
+\include{03-methodology/02-ParameterInitialization}
+\include{03-methodology/03-ClassicalOptimizer}
+\include{03-methodology/04-SetupSummary}
 
-\include{04-conclusion/conclusion}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 4
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\include{04-results/01-IntroducingProblem}
+\include{04-results/02-Benchmarking}
+\include{04-results/04-Results}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 5
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\include{05-discussion/conclusion}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % CHAPTERS END
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -153,14 +168,10 @@
 \addcontentsline{toc}{chapter}{Bibliography}
 \setheader{Bibliography}
 
-URLs in this thesis have been archived on Archive.org. Their link target in digital editions refers
-to this timestamped version.
-
-
 
 \bibliographystyle{unsrt}
 % argument is your BibTeX string definitions and bibliography database(s)
-\bibliography{dissertation}
+\bibliography{bibliography}
 
 
 %%%%
