Completed results chapter

--- a/thesis/04-results/01-Introduction.tex
+++ b/thesis/04-results/01-Introduction.tex
@@ -13,9 +13,9 @@ summarizes the three protocols considered throughout this chapter.
         \toprule
         Protocol            & Mixing Hamiltonian    & Problem Hamiltonian   & Cost function \\
         \midrule
-        standard            & $\hat{H}_\mathrm{M}$   & $\hat{H}_\mathrm{QP}$ & $\langle \hat{H}_\mathrm{QP} \rangle$ \\
-        linear\_quadratic   & $\hat{H}_\mathrm{M}$   & $\hat{H}_\mathrm{LP}$ & $\langle \hat{H}_\mathrm{QP} \rangle$ \\
-        linear\_abs         & $\hat{H}_\mathrm{M}$   & $\hat{H}_\mathrm{LP}$ & $\langle |\hat{H}_\mathrm{LP}| \rangle$ \\
+        \texttt{standard}            & $\hat{H}_\mathrm{M}$   & $\hat{H}_\mathrm{QP}$ & $\langle \hat{H}_\mathrm{QP} \rangle$ \\
+        \texttt{linear\_quadratic}   & $\hat{H}_\mathrm{M}$   & $\hat{H}_\mathrm{LP}$ & $\langle \hat{H}_\mathrm{QP} \rangle$ \\
+        \texttt{linear\_abs}         & $\hat{H}_\mathrm{M}$   & $\hat{H}_\mathrm{LP}$ & $\langle |\hat{H}_\mathrm{LP}| \rangle$ \\
         \bottomrule
     \end{tabular}
     \caption{Overview of QAOA protocols analyzed in this work.}
