Completed first version

--- a/thesis/04-results/01-Introduction.tex
+++ b/thesis/04-results/01-Introduction.tex
@@ -40,7 +40,7 @@ these selected test cases, including relevant problem parameters and solution en
     \centering
     \begin{tabular}{@{}ccccccccc@{}}
         \toprule
-        $N$ & no.\ qubits & $p$ ($p'$) & $q$ ($q'$) & $n_p$ & $n_q$ & $p_\mathrm{bitstring}$ & $q_\mathrm{bitstring}$ & solution(s) \\
+        $N$ & $n$ (\# qubits) & $p$ ($p'$) & $q$ ($q'$) & $n_p$ & $n_q$ & $p_\mathrm{bitstring}$ & $q_\mathrm{bitstring}$ & solution(s) \\
         \midrule
         25  & 4          & 5 (2)      & 5 (2)      & 2     & 2     & 10                     & 10                     & 0101                  \\
         77  & 6          & 7 (3)      & 11 (5)     & 2     & 4     & 11                     & 0101                   & 111010                \\
